--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,20 @@
-APP_NAME=Laravel
+APP_NAME="Tasks Module"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ITOPAX5zqKirriyhPQhtnLsLZGvA3u00l/jKNaRQ/vo=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://tasks.test
+TIMEZONE="America/Mexico_City"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=fullstack_test
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -22,9 +23,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
